RESOLVED FIXED268952
Proxy configuration should apply after a network process crash
https://bugs.webkit.org/show_bug.cgi?id=268952
Summary Proxy configuration should apply after a network process crash
Alex Christensen
Reported 2024-02-07 16:30:33 PST
Attachments
Alex Christensen
Comment 1 2024-02-07 16:31:10 PST
EWS
Comment 2 2024-02-08 08:09:24 PST
Committed 274287@main (eb352590aabe): <https://commits.webkit.org/274287@main> Reviewed commits have been landed. Closing PR #24046 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-02-08 08:10:15 PST
Note You need to log in before you can comment on or make changes to this bug.