Source/WebKit/NetworkProcess/NetworkSession.h
@@ -264,7 +264,7 @@ public:
 
 #if HAVE(NW_PROXY_CONFIG)
     virtual void clearProxyConfigData() { }
-    virtual void setProxyConfigData(Vector<std::pair<Vector<uint8_t>, WTF::UUID>>&&) { };
+    virtual void setProxyConfigData(const Vector<std::pair<Vector<uint8_t>, WTF::UUID>>&) { };
 #endif
 
     void setInspectionForServiceWorkersAllowed(bool);
